fix: tamanho e icone

--- a/client-side/src/app/components/arf-oversight-page/arf-oversight-navbar/arf-oversight-navbar.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-oversight-navbar/arf-oversight-navbar.component.html
@@ -6,7 +6,7 @@
 
     <ul>
         <li><img src="../../../../assets/imagens/navItem (1).png" alt="imagem"> Dashboard</li>
-        <li><img src="../../../../assets/imagens/navItem (3).png" alt="imagem"> Cadastro</li>
+        <li><img src="../../../../assets/icones/aviso-icon.png" alt="imagem"> Alertas</li>
         <li><img src="../../../../assets/imagens/navItem (4).png" alt="imagem"> Editar dados</li>
         <a [routerLink]="['/']"><li ><img src="../../../../assets/imagens/navItem (5).png" alt="imagem"> Sair</li></a>
     </ul>
