padronização do tamanho da fonte

--- a/client-side/src/app/components/arf-oversight-page/arf-oversight-navbar/arf-oversight-navbar.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-oversight-navbar/arf-oversight-navbar.component.scss
@@ -43,7 +43,7 @@ li{
     margin-left: 20px;
     margin-bottom: 18%;
     flex-direction: row;
-    font-size: 14px;
+    font-size: 0.9rem;
     cursor: pointer;
 }
 li>img{
@@ -63,6 +63,6 @@ a{
 }
 ul + p{
     margin-top: 60%;
-    font-size: 14px;
+    font-size: 0.9rem;
     color:gray;
 }
