--- a/client-side/src/app/components/arf-login/arf-login.component.html
+++ b/client-side/src/app/components/arf-login/arf-login.component.html
@@ -12,7 +12,7 @@
       <p>Senha</p>
       <input type="password" id="inptSenha">
       <label id="errorSenha"></label>
-      <button [routerLink]="['/oversight']" class="btnLogar">
+      <button [routerLink]="['/oversight', 'dashboard']" class="btnLogar">
         Entrar
       </button>
       <p>Não possui uma conta? <a [routerLink]="['/cadastro']">faça seu cadastro aqui!</a></p>
