--- a/client-side/src/app/components/arf-oversight-page/arf-oversight-page.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-oversight-page.component.html
@@ -1,19 +1,5 @@
 <section class="oversight-page">
   <arf-oversight-navbar class="oversight-navbar"></arf-oversight-navbar>
 
-  <article class="dashboards-container">
-    <div class="first-row dash-rows">
-      <arf-dashboard class="dash-cards" componente="CPU" titleIcon="/assets/icones/microchip-solid.svg">
-      </arf-dashboard>
-      <arf-dashboard class="dash-cards" componente="HDD" titleIcon="/assets/icones/hard-drive-solid.svg">
-      </arf-dashboard>
-    </div>
-
-    <div class="second-row dash-rows">
-      <arf-dashboard class="dash-cards" componente="RAM" titleIcon="/assets/icones/memory-solid.svg">
-      </arf-dashboard>
-      <arf-kpi titleIcon="/assets/icones/query_stats.svg" class="dash-cards">
-      </arf-kpi>
-    </div>
-  </article>
+  <router-outlet></router-outlet>
 </section>
