adição das rotas na nav

--- a/client-side/src/app/components/arf-oversight-page/arf-oversight-navbar/arf-oversight-navbar.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-oversight-navbar/arf-oversight-navbar.component.html
@@ -5,9 +5,9 @@
 <span>User</span>
 
     <ul>
-        <li><img src="../../../../assets/imagens/navItem (1).png" alt="imagem"> Dashboard</li>
-        <li><img src="../../../../assets/icones/aviso-icon.png" alt="imagem"> Alertas</li>
-        <li><img src="../../../../assets/imagens/navItem (4).png" alt="imagem"> Editar dados</li>
+        <li [routerLink]="['/oversight','dashboard']"><img src="../../../../assets/imagens/navItem (1).png" alt="imagem"> Dashboard</li>
+        <li [routerLink]="['/oversight','alertas']"><img src="../../../../assets/icones/aviso-icon.png" alt="imagem"> Alertas</li>
+        <li [routerLink]="['/oversight','editar-dados']"><img src="../../../../assets/imagens/navItem (4).png" alt="imagem"> Editar dados</li>
         <a [routerLink]="['/']"><li ><img src="../../../../assets/imagens/navItem (5).png" alt="imagem"> Sair</li></a>
     </ul>
     <p>©Arfas Monitoria</p>
