--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-dash-card/arf-dash-card.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-dash-card/arf-dash-card.component.html
@@ -1,4 +1,10 @@
 <div class="arf-dash-card">
+  <!-- Title -->
+  <section class="title-container">
+    <img [src]="titleIcon" />
+    <label>{{ title }}</label>
+  </section>
+
   <ng-content>
   </ng-content>
 </div>
