--- a/client-side/src/app/components/arf-oversight-page/arf-oversight-page.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-oversight-page.component.html
@@ -1,5 +1,8 @@
 <section class="oversight-page">
-  <arf-oversight-navbar class="oversight-navbar"></arf-oversight-navbar>
+  <!-- <arf-oversight-navbar class="oversight-navbar"></arf-oversight-navbar> -->
+  <div class="oversight-navbar"></div>
 
-  <router-outlet></router-outlet>
+  <div class="outlet">
+    <router-outlet></router-outlet>
+  </div>
 </section>
