--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-kpi/arf-dashboard-kpi.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-kpi/arf-dashboard-kpi.component.html
@@ -1,12 +1,6 @@
-<arf-dash-card class="arf-dash-card">
-  <!-- Title -->
-  <section class="title-container">
-    <img src="assets/icones/query_stats.svg" />
-    <label>KPIs</label>
-  </section>
-
+<arf-dash-card titleIcon="assets/icones/query_stats.svg" title="KPIs" class="kpi-container">
   <!-- Filters -->
-  <article class="filters-container">
+  <ul class="filters-container">
     <!-- Departamentos -->
     <li>
       <label>Departamento</label>
@@ -22,15 +16,7 @@
       <label>Mês:</label>
       <input (change)="verificarData(); atualizarKPIs()" [(ngModel)]="in_mes" type="month">
     </li>
-    <!--
-    <li class="date-fim-container dates">
-      <label>Fim:</label>
-      <input (change)="verificarData(); atualizarKPIs()" [(ngModel)]="dataFim" type="date">
-    </li> -->
-
-    <!-- <button [ngClass]="{'hoje-btn-on': chartRealTime}" (click)="atualizarData(); atualizarKPIs()"
-      id="hoje-btn">Hoje</button> -->
-  </article>
+  </ul>
 
   <!-- KPIs -->
   <section class="kpi-container">
