--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-chart/arf-chart.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-chart/arf-chart.component.html
@@ -1,26 +1,16 @@
+<!-- Legend -->
 <ul *ngIf="chartType == 'line' || !chartUserOn" class="chart-legends">
   <li *ngFor="let dep of filterData.departamentosSelecionados; let i = index" class="legends">
     <span [ngStyle]="{'background-color': dep.cor}" class="legends-box"></span>
     <label class="legends-label">{{dep.nome}}</label>
   </li>
 </ul>
-<div class="canvas-container" [ngClass]="{'chartUserOn': chartUserOn}">
-  <!-- Return arrow -->
-  <ng-container class="arrow-left">
-    <ng-content></ng-content>
-  </ng-container>
 
-  <!-- Métrica -->
-  <div class="metrica-container" *ngIf="chartUserOn && componente == 'CPU'">
-    <label>Métrica</label>
-    <select [(ngModel)]="metrica" (change)="atualizarDados()">
-      <option value="uso_relativo">Uso Relativo</option>
-      <option value="temperatura">Temperatura</option>
-    </select>
-  </div>
+<!-- Canvas Container -->
+<div class="canvas-container" [ngClass]="{'chartUserOn': chartUserOn}">
 
   <!-- Date -->
-  <arf-date-inputs [ngStyle]="{'padding-bottom': componente != 'CPU' ? '20px' : '0'}"
+  <arf-date-inputs [ngStyle]="{'padding-bottom': card != 'CPU' ? '20px' : '0'}"
     (chartStateEmitter)="chartRealTime = $event" class="date-inputs" *ngIf="chartUserOn">
   </arf-date-inputs>
 
