--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-filters/arf-filters.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-filters/arf-filters.component.scss
@@ -36,7 +36,7 @@
     }
 
     .pesquisar-input {
-      width: 150px;
+      width: 125px;
     }
   }
 }
@@ -101,7 +101,7 @@
 select {
   font-weight: bold;
   text-align: center;
-
+  width: 100%;
 }
 
 option:hover {
