--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-chart/arf-dashboard-chart.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-chart/arf-dashboard-chart.component.html
@@ -1,12 +1,13 @@
 <arf-dash-card class="arf-dash-card">
   <!-- Filters -->
-  <arf-filters *ngIf="!showChartUser" class="arf-filters" card="chart"></arf-filters>
+  <arf-filters [chartRealTime]="chartRealTime" (atualizarFiltros)="filterData = $event" class="arf-filters"
+    card="chart">
+  </arf-filters>
 
   <!-- Chart -->
-  <section *ngIf="exibicao === 'grafica'" class="chart-container">
-    <arf-date-inputs (chartStateEmitter)="chartRealTime = $event"></arf-date-inputs>
-
+  <section *ngIf="filterData" class="chart-container">
     <arf-chart [ngStyle]="{'align-self': filterData.departamentosSelecionados.length == 0 ? 'center' : 'flex-start' }"
-      [chartRealTime]="chartRealTime" [filterData]="filterData"></arf-chart>
+      [chartRealTime]="chartRealTime" [filterData]="filterData">
+    </arf-chart>
   </section>
 </arf-dash-card>
