--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-lista/arf-dashboard-lista.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-lista/arf-dashboard-lista.component.scss
@@ -1,10 +1,24 @@
-// .arf-dash-card {
-//   width: 100%;
-//   height: 100%;
-//   overflow: auto;
-//   position: relative;
-// }
-
 .arf-table-lista {
   overflow: auto;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background-color: #ededed;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background-color: var(--azul-safra);
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--azul-safra);
 }
