--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-chart/arf-chart.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-chart/arf-chart.component.html
@@ -1,25 +1,38 @@
 <!-- Legend -->
-<ul *ngIf="chartType == 'line' || !chartUserOn" class="chart-legends">
-  <li *ngFor="let dep of filterData.departamentosSelecionados; let i = index" class="legends">
-    <span [ngStyle]="{'background-color': dep.cor}" class="legends-box"></span>
-    <label class="legends-label">{{dep.nome}}</label>
-  </li>
+<ul class="chart-legends">
+  <ng-container *ngIf="chartRealTime; else barLegends">
+    <li *ngFor="let dep of filterData.departamentosSelecionados; let i = index" class="legends">
+      <span [ngStyle]="{'background-color': dep.cor}" class="legends-box"></span>
+      <label class="legends-label">{{dep.nome}}</label>
+    </li>
+  </ng-container>
+  <ng-template #barLegends>
+    <li *ngFor="let obj of objectValues(filterData.componentesSelecionados)" class="legends">
+      <span [ngStyle]="{'background-color': obj.color}" class="legends-box"></span>
+      <label class="legends-label">{{obj.nome}}</label>
+    </li>
+  </ng-template>
 </ul>
 
 <!-- Canvas Container -->
 <div class="canvas-container" [ngClass]="{'chartUserOn': chartUserOn}">
-
   <!-- Date -->
-  <arf-date-inputs [ngStyle]="{'padding-bottom': card != 'CPU' ? '20px' : '0'}"
-    (chartStateEmitter)="chartRealTime = $event" class="date-inputs" *ngIf="chartUserOn">
+  <arf-date-inputs class="date-inputs">
   </arf-date-inputs>
 
-  <!-- Chart -->
-  <canvas *ngIf="filterData.departamentosSelecionados.length != 0" baseChart [data]="chartData" [options]="chartOptions"
-    [type]="chartType">
-  </canvas>
+  <div class="canvas">
+    <!-- Chart -->
+    <canvas *ngIf="filterData.departamentosSelecionados.length > 0 && (qtdComponentesSelecionados > 0 || chartRealTime)"
+      baseChart [data]="chartData" [options]="chartOptions" [type]="chartType">
+    </canvas>
+  </div>
 
-  <label class="departamentoDisclaimer" *ngIf="filterData.departamentosSelecionados.length == 0 && !chartUserOn">
+  <label class="chart-disclaimer" *ngIf="filterData.departamentosSelecionados.length == 0">
     Nenhum departamento selecionado
+  </label>
+
+  <label class="chart-disclaimer" *ngIf="qtdComponentesSelecionados == 0 && !chartRealTime
+    && filterData.departamentosSelecionados.length != 0">
+    Nenhum componente selecionado
   </label>
 </div>
