--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-lista/arf-dashboard-lista.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-lista/arf-dashboard-lista.component.html
@@ -1,4 +1,4 @@
-<arf-dash-card class="arf-dash-card">
+<arf-dash-card title="Usuários" titleIcon="assets/icones/users_icon.svg" class="arf-dash-card">
   <!-- filters -->
   <arf-filters (atualizarFiltros)="filterData = $event; enviou()" card="lista"></arf-filters>
 
