--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-page.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-page.component.html
@@ -1,8 +1,8 @@
 <article class="dashboard">
-  <div class="dashboard-upper-row">
-    <arf-dashboard-kpi class="arf-kpi dash-cards"></arf-dashboard-kpi>
+  <div class="dashboard-charts">
     <arf-dashboard-chart class="arf-chart dash-cards"></arf-dashboard-chart>
+    <arf-dashboard-lista class="arf-lista dash-cards"></arf-dashboard-lista>
   </div>
 
-  <arf-dashboard-lista class="arf-lista dash-cards"></arf-dashboard-lista>
+  <arf-dashboard-kpi class="arf-kpi dash-cards"></arf-dashboard-kpi>
 </article>
