--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-chart/arf-dashboard-chart.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-chart/arf-dashboard-chart.component.html
@@ -1,4 +1,4 @@
-<arf-dash-card class="arf-dash-card">
+<arf-dash-card title="Gráficos" titleIcon="assets/icones/chart_icon.svg" class="arf-dash-card">
   <!-- Filters -->
   <arf-filters [chartRealTime]="chartRealTime" (atualizarFiltros)="filterData = $event" class="arf-filters"
     card="chart">
