--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-kpi/arf-dashboard-kpi.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-kpi/arf-dashboard-kpi.component.scss
@@ -50,37 +50,52 @@
 
 .kpi-container {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   justify-content: center;
-  gap: 10px;
-  height: 100%;
-  // padding: 5px 20px;
+  align-items: center;
+  row-gap: 10px;
 
-  .kpi-item {
-    width: 30%;
-    border-radius: 10px;
-    box-shadow: 0 0 2px 1px #000;
-    padding: 5px 0;
-    text-align: center;
+  .kpi-cards-container {
     display: flex;
-    flex-direction: column;
-    row-gap: 10px;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+    height: 100%;
+    padding-top: 10px;
 
-    &-title {
-      font-size: .9rem;
-    }
-
-    &-label {
-      font-size: 1rem;
-      border-radius: 50%;
-      border: 1px solid #000;
-      width: 48px;
-      height: 48px;
+    .kpi-card {
+      width: 45%;
+      border-radius: 10px;
+      box-shadow: 0 0 2px 1px #000;
+      padding: 5px 0;
+      text-align: center;
       display: flex;
       align-items: center;
       justify-content: center;
-      align-self: center;
-      box-shadow: 0 0 3px 2px #000;
+      flex-direction: column;
+      row-gap: 10px;
+
+      &-title {
+        font-size: .9rem;
+      }
+
+      &-label {
+        font-size: 1rem;
+        border-radius: 50%;
+        border: 1px solid #000;
+        width: 48px;
+        height: 48px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        align-self: center;
+        box-shadow: 0 0 3px 2px #000;
+      }
     }
+  }
+
+  .canvas {
+    width: 100%;
+    height: 100%;
   }
 }
