--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-dash-card/arf-dash-card.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-dash-card/arf-dash-card.component.scss
@@ -8,24 +8,25 @@
   height: 100%;
   border-radius: 10px;
   box-shadow: 0 0 2px 0 #000;
-  border: 2px solid #000;
+  // border: 2px solid #000;
   position: relative;
 
   .title-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 4px;
-    padding-bottom: 5px;
+    gap: 10px;
+    padding: 5px 0 7px;
 
     img {
-      width: 30px;
-      width: 30px;
+      width: 25px;
+      width: 25px;
     }
 
     label {
-      font-size: 1.3rem;
+      font-size: 1rem;
       font-weight: 900;
+      letter-spacing: 1.5px;
     }
   }
 }
