--- a/client-side/src/app/components/arf-oversight-page/arf-oversight-navbar/arf-oversight-navbar.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-oversight-navbar/arf-oversight-navbar.component.scss
@@ -1,7 +1,7 @@
 *{
     display: flex;
     flex-direction: column;
-
+    width: 177.297px;
 }
 
 .logo{
@@ -35,20 +35,22 @@ p + span{
 span + ul{
     margin-top: 25%;
     mix-blend-mode: normal;
-    
+    align-items: center;
     align-items: flex-start;
     display: flex;
 }
 li{
     display: flex;
-    margin-bottom: 18%;
     flex-direction: row;
     font-size: 0.9rem;
+    width: 100%;
     cursor: pointer;
+    padding: 15px 0 15px 10px;
+    transition-duration: 0.3s;
 }
 li>img{
     width: 19px;
-    margin-right: 4px;
+    margin-right: 15px;
 }
 .perfilft{
     width: 90px;
@@ -62,7 +64,19 @@ a{
     color: black;
 }
 ul + p{
-    margin-top: 40%;
+    z-index: 1;
+    position: fixed;
+    bottom: 10px;
+    width: 150px;
     font-size: 0.9rem;
     color:gray;
 }
+li:hover {
+    background-color: var(--azul-safra);
+    color: white;
+    font-weight: 450;
+    img{
+        filter: invert(100%);
+    }
+}
+
