adição do select

--- a/client-side/src/app/components/arf-homepage/arf-home-navbar/arf-home-navbar.component.html
+++ b/client-side/src/app/components/arf-homepage/arf-home-navbar/arf-home-navbar.component.html
@@ -10,7 +10,10 @@
   </ul>
 </nav>
 
-<nav class="right-nav">
-  <i class="fa-solid fa-right-to-bracket"></i>
-  <a [routerLink]="['/login']">Acessar</a>
-</nav>
+<button class="right-nav">
+  <select name="acessar" id="selectinpt">
+    <option value="analytics">Analytics</option>
+    <option value="acessos">Acessos</option>
+    <option value="infra">Infra</option>
+  </select>
+  <i class="fa-solid fa-right-to-bracket"></i></button>
