--- a/client-side/src/app/components/arf-homepage/arf-home-navbar/arf-home-navbar.desktop.scss
+++ b/client-side/src/app/components/arf-homepage/arf-home-navbar/arf-home-navbar.desktop.scss
@@ -74,4 +74,26 @@
     box-shadow: 0 0 2px -1px #000;
     text-shadow: 0.25px 0.25px var(--azul-safra);
   }
+  select{
+    width: 100%;
+    position: relative;
+    padding: 12px 10px;
+    z-index: 1;
+    border: none;
+    border-radius: 4px;
+    background-color: #d4ac68d8;
+    font-size: 1.2rem;
+  }
+  select:focus{
+    outline: none;
+  }
+  select+button{
+    outline: none;
+    position: relative;
+    z-index: 0;
+    border: none;
+    background-color: #d4ac68d8;
+    width: 100%;
+    height: 100%;
+  }
 }
