--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-table-lista/arf-table-lista.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-table-lista/arf-table-lista.component.scss
@@ -14,7 +14,8 @@ table {
   td,
   th {
     border: 1px solid #000;
-    padding: 1px;
+    padding: 1px 2px;
+    letter-spacing: .3px;
   }
 
   .head-rows {
