--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-date-inputs/arf-date-inputs.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-date-inputs/arf-date-inputs.component.scss
@@ -9,10 +9,26 @@
     text-align: center;
   }
 
+  label {
+    letter-spacing: 1px;
+    font-weight: 700;
+  }
+
+  input {
+    box-sizing: border-box;
+    background: #ffffff;
+    border: 1px solid #000000;
+    border-radius: 5px;
+    font-weight: 400;
+    text-align: center;
+  }
+
   .dates {
     font-size: 0.9rem;
     display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
     column-gap: 5px;
   }
 }
@@ -25,6 +41,7 @@
   color: #fff;
   padding: 3px;
   cursor: pointer;
+  align-self: flex-end;
 
   &-on {
     background: #1E2044 !important;
