--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-filters/arf-filters.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-filters/arf-filters.component.scss
@@ -12,7 +12,7 @@
   align-items: center;
   padding: 0px 5px 5px;
   gap: 5px;
-  border-bottom: 1px solid #000000;
+  // border-bottom: 1px solid #000000;
   font-size: .8rem;
 
   li {
