--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-chart/arf-dashboard-chart.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-chart/arf-dashboard-chart.component.scss
@@ -1,7 +1,9 @@
 .arf-filters {
-  padding: 5px 0;
+  padding: 5px 0 2px;
+  margin-bottom: 10px;
   margin-left: 40px;
   width: fit-content;
+  border-bottom: 1px groove #000;
 }
 
 .chart-container {
