--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-date-inputs/arf-date-inputs.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-date-inputs/arf-date-inputs.component.scss
@@ -2,8 +2,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  column-gap: 10px;
+  column-gap: 5px;
   width: 100%;
+  height: 100%;
 
   input {
     text-align: center;
@@ -24,7 +25,7 @@
   }
 
   .dates {
-    font-size: 0.9rem;
+    font-size: 0.8rem;
     display: flex;
     flex-direction: column;
     align-items: center;
