feat: algumas mudanças

--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-lista/arf-dashboard-lista.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-lista/arf-dashboard-lista.component.scss
@@ -1,6 +1,7 @@
 .arf-table-lista {
   overflow: auto;
   width: 100%;
+  position: relative;
 }
 
 /* width */
@@ -22,4 +23,13 @@
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background-color: var(--azul-safra);
+}
+
+.spin-icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 75px;
+  height: 75px;
 }
