--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-lista/arf-dashboard-lista.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-lista/arf-dashboard-lista.component.html
@@ -10,4 +10,6 @@
       <i (click)="toggleChartUser(false)" class="fa-solid fa-arrow-left"></i>
     </arf-chart>
   </ng-template>
+
+  <img class="spin-icon" src="assets/imagens/spinner-dash.gif" alt="">
 </arf-dash-card>
