--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-table-lista/arf-table-lista.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-table-lista/arf-table-lista.component.scss
@@ -100,3 +100,12 @@ img {
 .notPinned {
   color: #1e2044;
 }
+
+.spin-icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 150px;
+  height: 150px;
+}
