feat: ajustes para a API

--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-lista/arf-dashboard-lista.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-lista/arf-dashboard-lista.component.html
@@ -11,5 +11,5 @@
     </arf-chart>
   </ng-template>
 
-  <img class="spin-icon" src="assets/imagens/spinner-dash.gif" alt="">
+  <!-- <img class="spin-icon" src="assets/imagens/spinner-dash.gif" alt=""> -->
 </arf-dash-card>
