--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-kpi/arf-dashboard-kpi.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-kpi/arf-dashboard-kpi.component.html
@@ -1,4 +1,4 @@
-<arf-dash-card title="indicadores" titleIcon="assets/icones/kpi_icon.svg" class="arf-dash">
+<arf-dash-card card="kpi" title="indicadores" titleIcon="assets/icones/kpi_icon.svg" class="arf-dash">
   <!-- Filters -->
   <ul class="filters-container">
     <!-- Departamentos -->
