--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-dash-card/arf-dash-card.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-dash-card/arf-dash-card.component.scss
@@ -30,3 +30,12 @@
     }
   }
 }
+
+.spin-icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 75px;
+  height: 75px;
+}
