--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-dash-card/arf-dash-card.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-dash-card/arf-dash-card.component.html
@@ -1,10 +1,12 @@
 <div class="arf-dash-card">
+  <img *ngIf="isLoading" class=" spin-icon" src="assets/imagens/spinner-dash.gif" alt="">
+
   <!-- Title -->
   <section class="title-container">
     <img [src]="titleIcon" />
     <label>{{ title }}</label>
   </section>
 
-  <ng-content>
+  <ng-content *ngIf="!isLoading">
   </ng-content>
 </div>
