feat: API lista finalizada

--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-kpi/arf-dashboard-kpi.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-kpi/arf-dashboard-kpi.component.html
@@ -4,8 +4,8 @@
     <!-- Departamentos -->
     <li>
       <label>Departamento</label>
-      <select (change)="atualizarKPIs()" [(ngModel)]="departamentoSelecionado" class="select">
-        <option *ngFor="let depNome of departamentos" [value]="depNome">
+      <select (change)="atualizarKPIs()" [(ngModel)]="departamentosSelecionado" class="select">
+        <option *ngFor="let depNome of nomeDepartamentos" [value]="depNome">
           {{depNome.charAt(0).toUpperCase() + depNome.slice(1)}}
         </option>
       </select>
