--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-lista/arf-dashboard-lista.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-lista/arf-dashboard-lista.component.scss
@@ -1,7 +1,11 @@
+:host {
+  position: relative;
+
+}
+
 .arf-table-lista {
   overflow: auto;
   width: 100%;
-  position: relative;
 }
 
 /* width */
