--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-chart/arf-chart.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-chart/arf-chart.component.html
@@ -15,7 +15,7 @@
 </ul>
 
 <!-- Canvas Container -->
-<div class="canvas-container" [ngClass]="{'chartUserOn': chartUserOn}">
+<div class="canvas-container">
 
   <div class="canvas">
     <!-- Chart -->
