--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-table-lista/arf-table-lista.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-table-lista/arf-table-lista.component.html
@@ -36,20 +36,22 @@
     <td>
       {{ date }}
     </td>
-    <td [ngStyle]="{'backgroundColor':
-    gerarStatus(userData.cpu.temperatura, userData.cpu.alertaCriticoUso, componentes.cpu.checked)}">
-      {{ componentes.cpu.checked && userData.cpu.temperatura? (userData.cpu.temperatura).toFixed(1) + 'ºC' : 'N/D' }}
+    <td
+      [ngStyle]="{'backgroundColor':
+    gerarStatus(userData.cpu, true, userData.cpu.temperatura, userData.cpu.alertaCriticoTemperatura, componentes.cpu.checked)}">
+      {{ componentes.cpu.checked && userData.cpu.temperatura ?
+      (userData.cpu.temperatura) + 'ºC' : 'N/D' }}
     </td>
     <td [ngStyle]="{'backgroundColor':
-    gerarStatus(userData.cpu.uso, userData.cpu.alertaCriticoTemperatura,componentes.cpu.checked)}">
+    gerarStatus(userData.cpu, false, userData.cpu.uso, userData.cpu.alertaCriticoUso,componentes.cpu.checked)}">
       {{ componentes.cpu.checked && userData.cpu.uso ? (userData.cpu.uso).toFixed(1) + '%' : 'N/D'}}
     </td>
     <td [ngStyle]="{'backgroundColor':
-    gerarStatus(userData.ram.uso, userData.ram.alertaCriticoUso ,componentes.ram.checked)}">
+    gerarStatus(userData.ram, false, userData.ram.uso, userData.ram.alertaCriticoUso ,componentes.ram.checked)}">
       {{ componentes.ram.checked && userData.ram.uso? (userData.ram.uso).toFixed(1) + '%' : 'N/D' }}
     </td>
     <td [ngStyle]="{'backgroundColor':
-    gerarStatus(userData.hdd.uso, userData.hdd.alertaCriticoUso , componentes.hdd.checked)}">
+    gerarStatus(userData.hdd, false, userData.hdd.uso, userData.hdd.alertaCriticoUso , componentes.hdd.checked)}">
       {{ componentes.hdd.checked && userData.hdd.uso? (userData.hdd.uso).toFixed(1) + '%' : 'N/D' }}
     </td>
   </tr>
@@ -59,7 +61,8 @@
     Nenhum item encontrado!
   </p>
 
-  <p class="text-centered" *ngIf="departamentosSelecionados.length == 0 && userDataFiltered.length == 0">
+  <p class="text-centered"
+    *ngIf="departamentosSelecionados && departamentosSelecionados.length == 0 && userDataFiltered.length == 0">
     Nenhum departamento selecionado!
   </p>
 
