--- a/client-side/src/app/components/arf-cadastro/arf-cadastro.component.html
+++ b/client-side/src/app/components/arf-cadastro/arf-cadastro.component.html
@@ -16,13 +16,18 @@
           />
         </h1>
       </div>
-      <p>Use seu email para se cadastrar</p>
+      <p>Nome</p>
+      <input type="text" id="inptNome" />
+      <p>Email</p>
       <input type="text" id="inptEmail" />
       <div id="errorEmail"></div>
-      <p>Crie uma senha</p>
+      <p>Ramal</p>
+      <input type="text" id="inptTel" />
+      <div id="errorTel"></div>
+      <p>Senha</p>
       <input type="password" id="inptSenha" />
       <label id="errorSenha"></label>
-      Confirme sua senha
+      <p>Confirme sua senha</p>
       <input type="password" id="inptCsenha" />
       <label id="errorCSenha"></label>
       <button class="btnLogar" onclick="cadastrar()">Cadastrar</button>
