primeira tela de alertas

--- a/client-side/src/app/components/arf-oversight-page/arf-alertas/arf-alertas.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-alertas/arf-alertas.component.html
@@ -1,1 +1,29 @@
-<p>arf-alertas works!</p>
+<div class="dash-rows um">
+    <div class="dash-cards left">
+        <label>CPU</label>
+            <p>Ideal</p><input type="number"> 
+            <p>Atenção</p> <input type="number">
+            <p>Crítico </p><input type="number">
+    </div>
+    <div class="dash-cards">
+        <label>DISCO</label>
+        <p>Ideal</p><input type="number"> 
+        <p>Atenção</p> <input type="number">
+        <p>Crítico </p><input type="number">
+    </div>
+</div>
+<div class="dash-rows">
+    <div class="dash-cards left">
+        <label>RAM</label>
+        <p>Ideal</p><input type="number"> 
+        <p>Atenção</p> <input type="number">
+        <p>Crítico </p><input type="number">
+    </div>
+    <div class="dash-cards">
+        <label>ID Máquina</label>
+        <input type="text">
+        <button>
+            Salvar
+        </button>
+    </div>
+</div>
